--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Cool particle physics engine</title>
 </head>
 <body>
-    <p align="center">Enable javascript to view engine</p>
     <script type="module" src="script.js"></script>
+    <script type="module" src="particle.js"></script>
     <link rel="stylesheet" href="./styles.css">
 </body>
 </html>
